# tactile_grasp_lab

./: .clang-format  .gitignore  .pre-commit-config.yaml  AGENTS.md  CPPLINT.cfg  HARDWARE_BRINGUP.md  README.md  main.py  pyproject.toml
cad/: PTS_2.0.step
docs/: Makefile  ros2_repository_architecture.md  tactile_grasp_controller_codex_plan.md
docs/source/: conf.py  index.md
docs/source/api/: contactile_visualizer.rst  robotiq_2f85_driver.rst  tactile_grasp_controller.rst
docs/source/hardware/: bringup.md
docs/source/historical/: codex_plan.md
docs/source/overview/: getting_started.md
ros2_ws/src/buttonsensor_ros2_v1/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/buttonsensor_ros2_v1/launch/: buttonsensor.launch.py
ros2_ws/src/buttonsensor_ros2_v1/lib/: PTSDKConstants.h  PTSDKListener.h  PTSDKSensor.h  USER_APP_EXAMPLE.cpp
ros2_ws/src/buttonsensor_ros2_v1/src/: buttonsensor_ros2_node.cpp  buttonsensor_ros2_node.hpp
ros2_ws/src/contactile_visualizer/: package.xml  setup.cfg  setup.py
ros2_ws/src/contactile_visualizer/contactile_visualizer/: __init__.py  app.py
ros2_ws/src/contactile_visualizer/launch/: visualizer.launch.py
ros2_ws/src/papillarray_ros2_v2/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/papillarray_ros2_v2/launch/: papillarray.launch.py
ros2_ws/src/papillarray_ros2_v2/lib/: PTSDKListener.h  PTSDKParser.h  PTSDKPillar.h  PTSDKSensor.h
ros2_ws/src/papillarray_ros2_v2/src/: papillarray_ros2_node.cpp  papillarray_ros2_node.hpp
ros2_ws/src/robotiq_2f85_driver/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/robotiq_2f85_driver/config/: robotiq_2f85_driver.hardware.yaml  robotiq_2f85_driver.yaml
ros2_ws/src/robotiq_2f85_driver/launch/: robotiq_2f85_driver.launch.py
ros2_ws/src/robotiq_2f85_driver/robotiq_2f85_driver/: __init__.py  action_utils.py  driver.py  fake_driver.py  pymodbus_driver.py  robotiq_driver_core.py  robotiq_driver_node.py  safety.py
ros2_ws/src/robotiq_2f85_driver/test/: test_action_utils.py  test_driver_core_unit.py  test_fake_driver.py  test_pymodbus_driver.py  test_safety.py
ros2_ws/src/sensor_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/sensor_interfaces/msg/: ButtonSensorState.msg  GripperStatus.msg  GripperStreamingCommand.msg  PillarState.msg  SensorState.msg
ros2_ws/src/tactile_grasp_controller/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/tactile_grasp_controller/config/: hardware_bringup_coordinator.yaml  tactile_grasp_controller.hardware.yaml  tactile_grasp_controller.yaml
ros2_ws/src/tactile_grasp_controller/launch/: tactile_grasp_bringup.launch.py  tactile_grasp_controller.launch.py  tactile_grasp_hardware_bringup.launch.py
ros2_ws/src/tactile_grasp_controller/tactile_grasp_controller/: __init__.py  command_bridge.py  fault_guard.py  feature_extractor.py  hardware_bringup_coordinator.py  models.py  startup_gating.py  state_machine.py  tactile_grasp_controller_node.py
ros2_ws/src/tactile_grasp_controller/test/: test_command_bridge.py  test_fault_guard.py  test_feature_extractor.py  test_startup_gating.py  test_state_machine.py
scripts/: build_ros2.sh
sensors/contactile_3dfbs/: README.md
sensors/contactile_3dfbs/config/: dev001.yaml  env.sh
sensors/contactile_3dfbs/cpp/: CMakeLists.txt
sensors/contactile_3dfbs/cpp/src/: minimal_reader.cpp
sensors/contactile_3dfbs/docs/diagrams/: architecture.md  data_flow.md
sensors/contactile_3dfbs/docs/manuals/: 3DFBSC++LIN_B1.0_MAN_DEC24.md  3DFBSC++WIN_B1.0_MAN_DEC24.md  3DFBSPython_B1.0_MAN_FEB25.md  3DFBSROS2_B1.0_MAN_DEC24.md  3DFBSROS_B1.0_MAN_DEC24.md  3DFBSVIS_B3.0_MAN_DEC24.md  3DFBS_Datasheet_Rev_7.md  DEV001_Datasheet_Rev1.1.md  DEV001_schematic.md
sensors/contactile_3dfbs/docs/notes/: cpp_linux_sdk_guide.md  dev001_board.md  lab_setup_notes.md  python_sdk_guide.md  ros2_integration.md  sensor_datasheet.md  vis_software.md
sensors/contactile_3dfbs/python/: contactile_lab.py  pyproject.toml  quick_read.py
sensors/contactile_3dfbs/scripts/: check_usb.sh  run_cpp.sh  run_python.sh  run_ros2.sh  setup.sh
sensors/contactile_3dfbs/udev/: 99-contactile-dev001.rules  README.md
sensors/contactile_pts/: README.md
sensors/contactile_pts/config/: env.sh  pts.yaml
sensors/contactile_pts/cpp/: CMakeLists.txt
sensors/contactile_pts/cpp/src/: minimal_reader.cpp  ptsdk_compat.h
sensors/contactile_pts/docs/: conf.py  index.rst
sensors/contactile_pts/docs/manuals/: PTSC++LIN_2.0_MAN_MAR23.md  PTSC++WIN_2.0_MAN_MAR23.md  PTSCOM_2.0_SPEC_SEP22.md  PTSCTR_2.0_SPEC_DEC21.md  PTSDK_2.0_MAN_DEC21.md  PTSPython_1.0_MAN_MAR25.md  PTSROS2_1.0_MAN_NOV23.md  PTSROS_2.0_MAN_MAR23.md  PTSVIS_2.1_MAN_MAR23.md  PTS_2.1_SPEC_JAN25.md
sensors/contactile_pts/docs/notes/: communication_protocol.md  cpp_sdk_guide.md  python_sdk_guide.md  ros2_integration.md  sensor_overview.md  vis_software.md
sensors/contactile_pts/python/: pts_vis.py  pyproject.toml  quick_read.py
sensors/contactile_pts/scripts/: check_usb.sh  run_cpp.sh  run_python.sh  run_ros2.sh  setup.sh
sensors/contactile_pts/udev/: 99-contactile-pts.rules  README.md
tests/: test_main_keyboard.py
