<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>contactile_visualizer</name>
  <version>0.1.0</version>
  <description>Realtime Contactile PTS tactile sensor visualizer.</description>
  <maintainer email="2658327508@qq.com">xiaodalaing</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>python3-pyqtgraph</exec_depend>
  <exec_depend>python3-typer</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_interfaces</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
