<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tactile_grasp_controller</name>
  <version>0.1.0</version>
  <description>ROS 2 tactile grasp controller package for the Robotiq 2F-85 stack.</description>
  <maintainer email="user@example.com">Repository User</maintainer>
  <license>Proprietary</license>

  <depend>rclpy</depend>
  <depend>control_msgs</depend>
  <depend>robotiq_2f85_driver</depend>
  <depend>sensor_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
